devops-assessment/devops-assessment/sample-service/k8s-manifest/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: sample-app
        image: DockerHubRepo:TAG
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 120
          periodSeconds: 120
        readinessProbe:
          initialDelaySeconds: 120
          periodSeconds: 120
          httpGet:
            path: /health
            port: 3000
