devops-assessment/devops-assessment/sample-service/k8s-manifest/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: application
spec:
  ingressClassName: nginx
  rules:
  - host: "app.example.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sample-app-service
            port:
              number: 80
